--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,2 +1,9 @@
-- @pins.each do |pin|
-  %h2= link_to pin.title, pin_path(pin)
+#pins.transitions-enabled
+	- @pins.each do |pin|
+		.box.panel.panel-default
+			= link_to (image_tag pin.image.url), pin
+			.panel-body
+				%h2= link_to pin.title, pin
+				%p.user
+				%submitted_by
+				= pin.user.email
